# quran_api

./: API_ENDPOINTS.md  README.md  env.example  pyproject.toml  requirements.txt  run.py  wsgi.py
app/: __init__.py  config.py  extensions.py
app/admin/: routes.py
app/auth/: routes.py
app/content/: __init__.py  routes.py
app/models/: __init__.py  downloads.py  playlists.py  progress.py  quran.py  user.py
app/playlists/: __init__.py  routes.py
app/progress/: routes.py
app/review/: __init__.py  routes.py
app/schemas/: __init__.py  auth.py  common.py  downloads.py  playlists.py  progress.py  settings.py
app/settings/: __init__.py
app/stats/: __init__.py  routes.py
app/utils/: __init__.py
instance/: quran_dev.db
migrations/versions/: 826fcbc57eb4_initial_migration.py
scripts/: README.md  __init__.py  create_surahs.py  import_quran.py
tests/: __init__.py
