[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quran-api"
version = "1.0.0"
description = "Production-grade Flask backend for Quran memorization app"
authors = [{name = "Quran Learn Team"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Flask>=3.0.0",
    "Flask-SQLAlchemy>=3.1.1",
    "Flask-Migrate>=4.0.5",
    "Flask-Limiter>=3.5.0",
    "Flask-JWT-Extended>=4.6.0",
    "Flask-CORS>=4.0.0",
    "Flask-Smorest>=0.42.0",
    "psycopg2-binary>=2.9.9",
    "SQLAlchemy>=2.0.23",
    "Alembic>=1.13.1",
    "Pydantic>=2.5.0",
    "Pydantic-Settings>=2.1.0",
    "argon2-cffi>=23.1.0",
    "APScheduler>=3.10.4",
    "python-dotenv>=1.0.0",
    "gunicorn>=21.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-flask>=1.3.0",
    "factory-boy>=3.3.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[project.scripts]
quran-api = "quran_api.app.wsgi:app"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=quran_api --cov-report=term-missing --cov-report=html" 